fixed color in footer on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -272,6 +272,10 @@ a:hover {
         margin-left: auto;
         margin-right: auto;
     }
+
+    .row-footer {
+        height: 450px;
+    }
 }
 
 /* Responsive Media Query for Events */
